--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,11 @@
     <title>Google Map API Application</title>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_zlunFgE6eMRA4KFg_KhZ0CzN0gd9jtE&callback=renderInitialMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_zlunFgE6eMRA4KFg_KhZ0CzN0gd9jtE&libraries=places&callback=renderInitialMap"
         async defer></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -21,9 +21,9 @@
             <h2>Google Map Randomizer</h2>
         </div>
         <div class="row searchContainer">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-8 col-sm-offset-2">
+            <div class="col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Enter address" />
+                    <input type="text" id="pac-input" class="form-control" placeholder="Enter address" />
                     <span class="input-group-btn">
                         <button class="btn btn-primary" type="button">Search</button>
                     </span>
@@ -32,10 +32,18 @@
         </div>
     </div>
     <div class="mapContainer">
-        <div class="map"></div>
-        <div class="mapOne"></div>
-        <div class="mapTwo"></div>
-        <div class="mapThree"></div>
+        <div class="mainMap" id="map"></div>
+    </div>
+    <div class="streetViewContainer">
+        <div class="streetMap mapOne"></div>
+        <div class="streetMap mapTwo"></div>
+        <div class="streetMap mapThree"></div>
+    </div>
+    <div id="infowindow-content">
+        <img src="" width="16" height="16" id="place-icon">
+        <span id="place-name" class="title"></span>
+        <br>
+        <span id="place-address"></span>
     </div>
 </body>
 
