added 3 locations 50-70miles away on the street view maps

--- a/client/index.html
+++ b/client/index.html
@@ -38,9 +38,9 @@
         <span id="place-address"></span>
     </div>
     <div class="streetViewContainer">
-        <div class="streetMap mapOne"></div>
-        <div class="streetMap mapTwo"></div>
-        <div class="streetMap mapThree"></div>
+        <div class="streetMap" id="streetMap1"></div>
+        <div class="streetMap" id="streetMap2"></div>
+        <div class="streetMap" id="streetMap3"></div>
     </div>
 </body>
 
