--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,11 @@
     <title>Google Map API Application</title>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_zlunFgE6eMRA4KFg_KhZ0CzN0gd9jtE&libraries=places&callback=renderInitialMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsWfe0BjUECFqgqbbIfDqn4hnpVs5-wUw&libraries=places&callback=renderInitialMap"
         async defer></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -42,6 +44,27 @@
         <div class="streetMap" id="streetMap2"></div>
         <div class="streetMap" id="streetMap3"></div>
     </div>
+
+    <!-- Portfolio Modal template -->
+    <div class="modal fade" id="mapModal" role="dialog" style="padding: 0">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <div class="slidecontainer">
+                        <input type="range" min="1" max="100" value="2" class="slider" id="myRange">
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="mapModalContainer"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="signature">Written
+        <br> Khaleel Younis</div>
+
 </body>
 
 </html>
