--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <div class="slidecontainer">
-                        <input type="range" min="1" max="100" value="2" class="slider" id="myRange">
+                        <input type="range" min="1" max="100" value="2" class="slider" id="range">
                     </div>
                 </div>
                 <div class="modal-body">
@@ -62,8 +62,9 @@
         </div>
     </div>
 
-    <div class="signature">Written
-        <br> Khaleel Younis</div>
+    <div class="signature">
+        <span>Developed By Khaleel Younis</span>
+    </div>
 
 </body>
 
