--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
         <div class="streetMap" id="streetMap3"></div>
     </div>
 
-    <!-- Portfolio Modal template -->
+    <!-- Map Modal -->
     <div class="modal fade" id="mapModal" role="dialog" style="padding: 0">
         <div class="modal-dialog">
             <div class="modal-content">
